# rusty-todo-md-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  shell.nix  sync.sh
.github/workflows/: main.yaml
