[build-system]
requires = ["setuptools>=69.5", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "rusty-todo-md-pre-commit"
version = "0.0.0"
description = "Pre-commit shim for rusty-todo-md (installs prebuilt wheels from PyPI)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["rusty-todo-md==1.10.2"]

[tool.setuptools]
# This shim has no importable packages; tell setuptools not to look for any.
packages = []
include-package-data = false
